Correct Desktop File
This is a GNOME goal
https://live.gnome.org/GnomeGoals/CorrectDesktopFiles

Signed-off-by: Simonas Kazlauskas <simonas@kazlauskas.me>

--- a/trifle/lightread.desktop.in
+++ b/trifle/lightread.desktop.in
@@ -1,5 +1,6 @@
 [Desktop Entry]
-_Name=Feeds
+_Name=Trifle
+_GenericName=Feeds Reader
 _Comment=Google Reader for GNOME
 Categories=GNOME;Utility;Internet;
 Exec=python -m trifle
