--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,9 +1,9 @@
 trifle.desktop.in
-[type: gettext/glade]trifle/data/ui/about-dialog.ui
-[type: gettext/glade]trifle/data/ui/login-dialog.ui
-[type: gettext/glade]trifle/data/ui/preferences-dialog.ui
-[type: gettext/glade]trifle/data/ui/subscribe-dialog.ui
-[type: gettext/glade]trifle/data/ui/window.ui
+trifle/data/ui/about-dialog.ui
+trifle/data/ui/login-dialog.ui
+trifle/data/ui/preferences-dialog.ui
+trifle/data/ui/subscribe-dialog.ui
+trifle/data/ui/window.ui
 trifle/__init__.py
 trifle/__main__.py
 trifle/arguments.py
