Write out dependencies

--- a/buildscripts/archlinux/PKGBUILD
+++ b/buildscripts/archlinux/PKGBUILD
@@ -5,7 +5,7 @@ pkgdesc='Google Reader for GNOME'
 url='https://github.com/simukis/Feeds'
 license=('GPL2')
 arch=('any')
-depends=('python')
+depends=('python' 'libgnome-keyring' 'gtk3' 'libwebkit3' 'libnotify')
 #optdepends=('')
 short_hash='a0ac004'
 source=("$url/zipball/$short_hash")
