--- a/trifle.desktop.in
+++ b/trifle.desktop.in
@@ -3,7 +3,7 @@ _Name=Trifle
 _GenericName=Feeds Reader
 _Comment=Google Reader for GNOME
 Categories=GNOME;Utility;Internet;
-Exec=python -m trifle
+Exec=python3 -m trifle
 Icon=trifle
 Terminal=false
 Type=Application
