Name trifle should not be exposed to user

--- a/trifle.desktop.in
+++ b/trifle.desktop.in
@@ -1,5 +1,5 @@
 [Desktop Entry]
-_Name=Trifle
+_Name=Feeds
 _GenericName=Feeds Reader
 _Comment=Google Reader for GNOME
 Categories=GNOME;Utility;Internet;
