Save a trifle executable to /usr/bin/
Fixes #18

--- a/trifle.desktop.in
+++ b/trifle.desktop.in
@@ -3,7 +3,7 @@ _Name=Feeds
 _GenericName=Feeds Reader
 _Comment=Google Reader for GNOME
 Categories=GNOME;Network;Feed;News;
-Exec=python3 -m trifle
+Exec=trifle
 Icon=trifle
 Terminal=false
 Type=Application
