--- a/buildscripts/archlinux/PKGBUILD
+++ b/buildscripts/archlinux/PKGBUILD
@@ -5,7 +5,7 @@ pkgdesc='Google Reader for GNOME'
 url='https://github.com/simukis/Feeds'
 license=('GPL2')
 arch=('any')
-depends=('python' 'libgnome-keyring' 'gtk3' 'libwebkit3' 'libnotify')
+depends=('python' 'python-lxml' 'libsecret' 'gtk3' 'libwebkit3' 'libnotify')
 install='trifle.install'
 hash='80ececa410c3fe895ee3100a7fa2c7451458a9d8'
 short_hash=$(echo $hash | head -c7)
